--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: netmon
 Section: user/utilities
 Priority: extra
-Maintainer: spag <maemo@golwen.net>
+Maintainer: Peter Kozak <maemo@golwen.net>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
 
@@ -9,5 +9,5 @@ Package: netmon
 Architecture: all
 Depends: python2.5, python-dbus, python2.5-gtk2, python-hildon
 Description: NetMon Cellular Network Monitor for Maemo.
- Shows Signal Strength in dBm, Cell ID, LAC, RNC, Network Code, etc.
+ Displays Signal Strength in dBm, Cell ID, LAC, RNC, Network Code, etc.
 XSBC-Bugtracker: XSBC-Bugtracker: http://bugs.maemo.org
